# CRust

./: .gitignore  Cargo.toml  README.md  build.rs  clean  debug.sh  gdb_commands.gdb  packets.md  run  upload.sh
c_controller/: .gitignore  Cargo.toml  Makefile  README.md  firmware.hex
c_controller/include/: Motors.h  ServoMotor.h  TimerA.h  drivingAlgos.h  leds.h  motors.h  offsetCalc.h  pid.h  spi.h  switches.h  uart.h
c_controller/msp432-gcc-support-files/: README.md
c_controller/msp432-gcc-support-files/include/: msp432p401r.lds  uart.c
c_controller/msp432-gcc-support-files/src/: system_msp432p401m.c  system_msp432p401r.c
c_controller/src/: ADC14.c  ControlPins.c  CortexM.c  HM-10_Rename.axf  HardwareInterface.c  Motors.c  ServoMotor.c  SimulatorInterface.c  SysTickTimer.c  Timer32.c  TimerA.c  driveBySerial.c  fast.c  fasterist.c  fastest.c  i2c.c  leds.c  lib.rs  main.c  motors.c  offsetCalc.c  oled.c  packets.c  pid.c  simulatedMotors.h  slow.c  switches.c  uart.c
rust_controller/: Cargo.toml  upload.sh
rust_controller/.cargo/: config
rust_controller/src/: main.rs
rust_controller/src/hardware_drivers/: analog.rs  mod.rs  rgb.rs  screen.rs  terminal.rs
simulation_viewer/: Cargo.toml  pybluetoothserial.py
simulation_viewer/src/: main.rs  packetextraction.rs
simulation_viewer/src/car/: mod.rs
simulation_viewer/src/gui/: mod.rs  sidebar.rs  topbar.rs
simulation_viewer/src/packets/: mod.rs  motor_packet.rs
simulation_viewer/src/serial_interface/: mod.rs
src/: main.rs
src/C/: mod.rs
src/viewer/: mod.rs
