[package]
name = "simulation_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.1.6"
eframe = "0.26.2"
serialport = "4.3.0"
bevy = "0.13.0"
bevy_egui = "0.25.0"
bluetooth-serial-port = "0.6.0"
bluest = "0.6.6"
# tokio = "1.37.0"

[dependencies.async-trait]
version = "0.1.57"

[dependencies.futures-core]
version = "0.3.28"

[dependencies.futures-lite]
default-features = false
version = "1.13.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.143"

[dependencies.tracing]
default-features = false
version = "0.1.36"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "time"]
version = "1.20.1"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.15"